# Plato-Assignment

./: README.md  pyproject.toml
src/plato_assignment/: __init__.py
